Fix button overflow on certerror
Auditors: @aekeus

Fix #1545

--- a/less/about/certerror.less
+++ b/less/about/certerror.less
@@ -39,8 +39,3 @@
 .errorUrl {
   font-weight: bolder;
 }
-
-.buttons {
-  display: flex;
-  justify-content: space-between;
-}
